Filterable Search: Fix alignment on close panel button

--- a/resources/gato-area-filterable-search/css/filterablesearch.scss
+++ b/resources/gato-area-filterable-search/css/filterablesearch.scss
@@ -187,6 +187,7 @@
         display: flex;
         flex-direction: column;
         background-color: transparent;
+        align-items: center;
         padding: 0;
         i.fa-close {
           font-size: 2rem;
